# zcash-wasm-benchmark

./: .gitignore  Cargo.toml  README.md  REPORT.md  build.rs  index.html  index.js  justfile  rust-toolchain  webdriver.json
.cargo/: config.toml
.github/workflows/: build-and-deploy.yml
blockstream/: .gitignore  blockstream.js  bs.js  index.html  index.js  index.ts  package.json
demo-page/: .gitignore  .proxyrc.js  README.md  package.json
demo-page/src/: App.css  App.js  enable-threads.js  index.html
results/: proving.csv  tree_sync.csv  trial_decryption.csv
src/: bench_params.rs  block_range_stream.rs  commitment_tree.rs  conversions.rs  lib.rs  proof_gen.rs  proto.rs  protobuf_wasm_bindgen_ctor.rs  trial_decryption.rs  types.rs
src/benchmarks/: mod.rs
src/codegen/: compact_formats.rs  mod.rs  service.rs
src/proto/: compact_formats.rs  service.rs
src/protos/: compact_formats.rs
tests/: web.rs
