[package]
name = "zcash-wasm-benchmark"
version = "0.1.0"
authors = ["eric"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "-O4"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

zcash_note_encryption = "0.4.0"
orchard = { version = "0.7.0", default-features = false }
getrandom = { version = "0.2.12", features = ["js"] }
web-sys = { version = "0.3.68", features = [
    "console",
    "Performance",
    "ReadableStream",
    "Headers",
    "ReferrerPolicy",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "ServiceWorkerGlobalScope",
] }
rand = "0.8.5"
rayon = "1.8"
wasm-bindgen-rayon = { version = "1.2", optional = true }
wasm-bindgen-futures = "0.4.41"
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.80"
serde-wasm-bindgen = "0.6.5"
sapling = { package = "sapling-crypto", version = "0.1.1", default-features = false, features = [
    "multicore",
] }
jubjub = "0.10.0"
ff = { version = "0.13.0", default-features = false }
shardtree = "0.2.0"
zcash_primitives = "0.14.0"
incrementalmerkletree = "0.5.0"
js-sys = "0.3.69"
wasm-streams = "0.4.0"
futures-util = { version = "0.3.30", features = ["io", "sink"] }
zcash_client_backend = "0.11.0"
futures-channel = "0.3"
prost = { version = "0.12", default-features = false }
tonic = { version = "0.11", default-features = false, features = [
    "prost",
    "codegen",
] }
tonic-web-wasm-client = "0.5"
hex = "0.4.3"

[build-dependencies]
tonic-build = { version = "0.11", default-features = false, features = [
    "prost",
] }
which = "4"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
wasm-bindgen-rayon = { version = "1.2" }
web-sys = { version = "0.3.68", features = ["console", "Window", "Navigator"] }

[features]
default = ["console_error_panic_hook"]
parallel = ["wasm-bindgen-rayon", "orchard/multicore"]
no-bundler = ["wasm-bindgen-rayon/no-bundler"]
